--- a/src/scss/03_variables.scss
+++ b/src/scss/03_variables.scss
@@ -11,6 +11,8 @@ $color-emoticon-hight: rgb(89, 240, 18);
 $size-xs-archive-buttons: 25px;
 $size-sm-archive-buttons: 30px;
 
+$layout-xs-sm-padding: 1rem;
+
 $media-sm: 360px;
 $media-md: 768px;
 $media-lg: 1024px;
