--- a/src/scss/07_app.scss
+++ b/src/scss/07_app.scss
@@ -14,7 +14,7 @@
     right: 0;
     width: 100%;
     z-index: 1;
-    padding: 1rem;
+    padding: $layout-xs-sm-padding;
   }
 
   &__container {
