feat: add 'remove button' in html and scss

--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -133,9 +133,13 @@
     }
 
     &--add-new {
-
       &:hover {
-        
+        background-color: $color-high;
+      }
+    }
+    
+    &--remove {
+      &:hover {
         background-color: $color-low;
       }
     }
