feat: add 'remove item' button only for last archive item

--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -70,7 +70,14 @@
     &--empty {
       text-align: center;
       font-style: italic;
-      @include flex-center;
+    }
+
+    &--removable {
+      grid-template-columns: 1fr repeat(4, auto);
+    }
+    
+    &--visible {
+      display: grid;
     }
 
     &:nth-child(even) {
