feat(js): add event listeners for remove last item button

--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -63,11 +63,8 @@
     border-bottom: 1px solid transparent;
     transition: box-shadow $time-edit-mode;
 
-    &--visible {
-      display: grid;
-    }
-
     &--empty {
+      display: none;
       text-align: center;
       font-style: italic;
     }
