--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -145,9 +145,21 @@
     }
     
     &--remove {
+      fill: #fff;
       &:hover {
-        background-color: $color-low;
+        background: none;
+        fill: $color-low;
       }
+    }
+  }
+
+  &__svg {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+
+    &:hover {
+      
     }
   }
 }
