--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -143,24 +143,6 @@
         background-color: $color-high;
       }
     }
-    
-    &--remove {
-      fill: #fff;
-      &:hover {
-        background: none;
-        fill: $color-low;
-      }
-    }
-  }
-
-  &__svg {
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-
-    &:hover {
-      
-    }
   }
 }
 ////////////////////////////////////////////////////////////////// EDITION MODE
@@ -267,5 +249,28 @@
       visibility: visible;
       transform: translateX(0);
     }
+  }
+}
+
+.remove-button {
+  display: none;
+  fill: #fff;
+  padding: 0;
+  width: $size-xs-archive-buttons;
+  height: $size-xs-archive-buttons;
+  transition: fill $time-hover-effect;
+
+  &--visible {
+    @include flex-center;
+  }
+
+  &:hover {
+    fill: $color-low;
+  }
+
+  &__svg {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
   }
 }
