--- a/src/scss/07_app.scss
+++ b/src/scss/07_app.scss
@@ -14,6 +14,7 @@
     right: 0;
     width: 100%;
     z-index: 1;
+    background-color: $color-background;
     padding: $layout-xs-sm-padding;
   }
 
