--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -14,12 +14,12 @@
   align-items: center;
   padding-top: 4rem;
   transform: translateY(-100%);
-  transition: transform 0.5s ease-in, visibility 0s 0.5s;
+  transition: transform 0.3s ease-in, visibility 0s 0.3s;
 
   &--visible {
     visibility: visible;
     transform: translateY(0);
-    transition: transform 0.5s cubic-bezier(.18,1.1,.74,1.16), visibility 0s;
+    transition: transform 0.3s ease-out, visibility 0s;
   }
 
   &--on-top {
