feat(scss): add basic style for 'add new archive item' section

--- a/src/scss/03_variables.scss
+++ b/src/scss/03_variables.scss
@@ -11,6 +11,8 @@ $color-emoticon-hight: rgb(89, 240, 18);
 $size-xs-archive-buttons: 25px;
 $size-sm-archive-buttons: 30px;
 
+$size-xs-archive-add-new: 100px;
+
 $layout-xs-sm-padding: 1rem;
 
 $media-sm: 360px;
