--- a/src/scss/08_archive.scss
+++ b/src/scss/08_archive.scss
@@ -12,7 +12,8 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding-top: 4rem;
+  overflow: auto;
+  padding-top: 5rem;
   transform: translateY(-100%);
   transition: transform 0.3s ease-in, visibility 0s 0.3s;
 
@@ -45,75 +46,12 @@
     }
   }
 
-  &__list {
-    list-style: none;
-    padding: 0 $layout-xs-sm-padding;
-    margin: 0;
-    margin-top: 1rem;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    scroll-behavior: smooth;
-  }
-
-  &__item {
-    display: none;
-    grid-template-columns: 1fr repeat(3, auto);
-    grid-column-gap: $edit-group-col-gap;
-    align-items: center;
-    padding: 0.4rem;
-    border-top: 1px solid transparent;
-    border-bottom: 1px solid transparent;
-    transition: box-shadow $time-edit-mode;
-
-    &--empty {
-      display: none;
-      text-align: center;
-      font-style: italic;
-    }
-
-    &--removable {
-      grid-template-columns: 1fr repeat(4, auto);
-    }
-    
-    &--visible {
-      display: grid;
-    }
-
-    &:nth-child(even) {
-      background-color: rgba($color: #fff, $alpha: 0.05);
-    }
-    
-    &:not(:last-child) {
-      border-bottom: 1px solid $color-grey;
-    }
-  }
-
   & &__item--on-top { // overriding higher specificity selectors
     box-shadow: 0 0 30px rgba($color: #000, $alpha: 0.3);
     background-color: $color-background;
     position: relative;
     border-color: #fff;
     z-index: 1;
-  }
-
-  &__date {
-    margin: 0;
-  }
-  
-  &__value {
-    @include flex-center;
-    margin: 0;
-    font-weight: bold;
-    width: $size-xs-archive-buttons;
-    height: $size-xs-archive-buttons;
-    border: 2px solid #fff;
-    border-radius: 50%;
-
-    @media only screen and (min-width: $media-sm) {
-      width: $size-sm-archive-buttons;
-      height: $size-sm-archive-buttons;
-    }
   }
 
   &__buttons {
@@ -147,6 +85,112 @@
       }
     }
   }
+}
+//////////////////////////////////////////////////////////////////////// WEEKS 
+
+.weeks {
+  width: 100%;
+  padding: $layout-xs-sm-padding;
+
+  &__empty {
+    display: none;
+    text-align: center;
+    margin: 0;
+
+    &--visible {
+      display: block;
+    }
+  }
+
+  &__week {
+    width: 100%;
+  }
+
+  &__heading {
+    margin: 0;
+    background-color: $color-water;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 5px 0;
+  }
+
+  &__list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  &__item {
+    display: grid;
+    grid-template-columns: 1fr auto auto auto;
+    grid-gap: 5px;
+    align-items: center;
+    padding: 5px;
+  }
+
+  &__text {
+    text-align: left;
+    margin: 0;
+
+    &--day {
+      font-weight: bold;
+      text-transform: capitalize;
+    }
+
+    &--date {
+      font-size: 0.85rem;
+      margin-top: 3px;
+    }
+  }
+
+  &__value {
+    @include flex-center;
+    margin: 0;
+    font-weight: bold;
+    width: $size-xs-archive-buttons;
+    height: $size-xs-archive-buttons;
+    border: 2px solid #fff;
+    border-radius: 50%;
+
+    @media only screen and (min-width: $media-sm) {
+      width: $size-sm-archive-buttons;
+      height: $size-sm-archive-buttons;
+    }
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
 ////////////////////////////////////////////////////////////////// EDITION MODE
 .edition {
