--- a/src/scss/03_variables.scss
+++ b/src/scss/03_variables.scss
@@ -1,4 +1,5 @@
 $color-background: #3767AD;
+$color-dark-background: darken($color-background, 10%);
 $color-water: #2196f3;
 $color-grey: #ccc;
 $color-low: rgb(221, 75, 30);
